Closed Bug 144930 Opened 22 years ago Closed 22 years ago

Profile manager pops up at start with quicklaunch enabled

Categories

(SeaMonkey :: Startup & Profiles, defect)

x86
Windows XP
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: kjordan2001, Assigned: ccarlen)

References

Details

(Keywords: regression)

Attachments

(1 file)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.0.0+)
Gecko/20020515
BuildID:    2002051508

In the latest nightly build, everytime I boot up with the quicklaunch enabled, a
profile manager pops up.  This is the first time this has happened.  I only have
on profile.  When I disable the quicklaunch, it no longer pops up.

Reproducible: Always
Steps to Reproduce:
1.  Install 2002051508 nightly build.
2.  Have quicklaunch start up.
3.  Profile manager pops up, usually on the second time.

Expected Results:  Not popped up a profile manager unless I have more than one
profile.
likely due to the fix for bug 76431
I have same kind of problem. It only appears when I close every mozilla windows,
and want some minutes later to open a new one.

It seems that fixing bug 76431 broke some other things :-/

Confirming this bug, anyway, closer to what I am facing with build 2002051508 -
WinXP.

Thanks RK.A.a for this bug number.
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 144990 has been marked as a duplicate of this bug. ***
Regression from bug 76431.  Reassigning, though help is appreciated.  We need to
unlock the profile when the all windows are closed (and relock when we're
restarted).
Assignee: ben → ccarlen
Target Milestone: --- → mozilla1.0
> We need to unlock the profile when the all windows are closed (and relock when
we're restarted).

Why's that? The profile is in use the whole time. Only when you switch profiles
should the lock be changed and, looking at the code, it is. In turbo mode,
unless you switch between profiles on closing the last window and starting
again, the same profile is in use the whole time - there's no call to
SetCurrentProfile() after the initial one.

It seems bug 76431 is a likely candidate but I'm not sure. If the profile window
is popping up, that would be due to the default profile being locked. When this
happens, and you try and select that profile, do you get an an alert saying the
profile is in use?
Stepping through it, I see why this is happening. Working on a fix...
Status: NEW → ASSIGNED
Attached patch patchSplinter Review
This fixes it. Need r=/sr=
This return NS_OK is right above the spot where I was checking to see if I could
get a lock on the profile dir, the failure of which is the cause of the bug.
Comment on attachment 83909 [details] [diff] [review]
patch

r=rjesup@wgate.com
Spent a while verifying that numProfiles==1 is the correct test
Attachment #83909 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 145090 has been marked as a duplicate of this bug. ***
verified
Status: RESOLVED → VERIFIED
*** Bug 146526 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: