Bug 144930 - Profile dialog pops up on every launch with QuickLaunch. Regression from bug 76431. r=rjesup@wgate.com/sr=brendan@mozilla.org